--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,15 @@ body {
 }
 p{
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 /* Input area CSS */
 .input-area {
-    /* background-color: #F8F8F8; */
+    background-color: #E37777;
 }
-.bg-gray {
-    background-color: #DCDCDC;
-}
-#calculate {
+
+#calculate, .save-button {
     background-color: #59A5FF;
     color: white;
     text-align: center;
@@ -26,4 +24,8 @@ p{
     padding: 7px 30px;
     margin: 15px;
     border-radius: 5px;
+}
+
+.save-area {
+    display: flex;
 }
